2008-03-14 Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/dbus.c: (gc_dbus_init): Fixed olpc trac bug#6363
	"GCompris won't start if settings are changed".
	Added support for gthread initialization in dbus startup if
	not yet done.

2007-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Made the chess activity to search for gnuchess in usual
	directory if it is not found in the one detected at compilation
	time. It is done to accomodate cases were the run time and build
	time have a different gnuchess package.
	Commit r3284

	* src/chess_computer-activity/chess.c: (start_board):
	* src/gcompris/gcompris.c: (load_properties), (main):
	* src/runit.sh:

2007-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added a little hack to avoid missing symbols from libgnomecanvas
	  at plugin load time. (merge from trunk 3060)

	* src/gcompris/gcompris.c: (main):

2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- The sugar dbus API uses Setactive instead of set_active.

	* src/gcompris/dbus.c: (_SetActive), (gc_dbus_init):

2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Merge of commit trunk 3038, now compile out of tree.
	* src/*/Makefile.am


2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Removed require on gtk-pixbuf as it's already required by GTK.
	  merged from trunk 3006
	* configure.in

2007-08-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- merged from trunk 2914 2908 2911

	* boards/flags/af.png: Created from the wikipedia one
	http://upload.wikimedia.org/wikipedia/commons/a/af/Flag_of_South_Africa.svg
	* src/gcompris/config.c
	* po/af.po
	* po/ChangeLog
	* configure.in
	* src/gcompris/gcompris_db.c: Fixed database creation bug when
	the "Unaffected" or "Users without a class" translation did contains a single quote.

2007-08-29  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added support for Breton by Alan Monfort.
	- Merged from trunk 2995
	* configure.in:
	* docs/gcompris2spip.pl:
	* po/ChangeLog:
	* po/br.po:
	* src/gcompris/config.c:
