@@ -2,8 +2,7 @@
 # This is sourced by runit.sh
 path=$1
 activity=connect4-2players
-pythonplugindir=$path 
-resourcedir=$path/$resources
-resources
-  ../connect4-activity/resources
+plugindir=$path/../boards/.libs
+pythonplugindir=$path/../connect4-activity 
+resourcedir=$path/../connect4-activity/resources
 section="/strategy"
